added comment section

--- a/Project/Frontend/course_page.html
+++ b/Project/Frontend/course_page.html
@@ -91,10 +91,24 @@
         <br>
         <hr>
         <div class="row ">
-            <div class="col right">
+            <div class="col right" style="color: #008736;">
                <h5>نظرات</h5>  
             </div> 
         </div>
+
+        <div class="row card" style="padding: 15 10 10 20;">
+            <div class="col s1 right" style="color: #008736;" >
+                <i class="material-icons right-align medium">account_circle</i> 
+             </div> 
+
+            <div class="col s11 right right-align" >
+               <div style="font-weight: bold; color: #008736;" >نام و نام خانوادگی:</div>  
+               <p>ملورم ایپسوم متن ساختگی با تولید سادگی نامفهوم ملورم 
+                   ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک با
+                    تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</p>
+            </div> 
+        </div>
+
     </div>
 
 </body>
