--- a/Project/Frontend/courses.html
+++ b/Project/Frontend/courses.html
@@ -39,55 +39,17 @@
 	</h5>
 	<hr>
 	<div class="container" >
-		<div class="row" style=" margin-right: 150px;">
-			<div class="col s4 m7">
-				<div class="card medium">
-					<div class="card-image">
-						<img src="images/img1.jpg">
-						<!-- <span class="card-title grey-text text-darken-4">Card Title</span> -->
-					</div>
-					<div class="card-content right-align">
-						<h5>عنوان 1</h5>
-						<p >مدرس: نام نام خانوادگی
-						</p>
-					</div>
-				</div>
-			</div>
+		<div class="row courses-row" style=" margin-right: 150px;">
+			
 
-			<div class="col s12 m7">
-				<div class="card medium">
-					<div class="card-image right-align">
-						<img src="images/img1.jpg">
-						<!-- <span class="card-title black">دوره شماره 1</span> -->
-					</div>
-					<div class="card-content right-align">
-						<h5>عنوان 1</h5>
-						<p >مدرس: نام نام خانوادگی
-						</p>
-					</div>
-				</div>
-			</div>
+			
 
-			<div class="col s12 m7">
-				<div class="card medium">
-					<div class="card-image">
-						<img src="images/img1.jpg">
-						<!-- <span class="card-title">Card Title</span> -->
-					</div>
-					<div class="card-content right-align">
-						<h5>عنوان 1</h5>
-						<p >مدرس: نام نام خانوادگی
-						</p>
-					</div>
-				</div>
-			</div>
 		</div>
-
 	</div>
-
 </body>
 
 <script>
+	
 	$(document).ready(function(){
 		var x = localStorage['token'];
 	    console.log(x);
@@ -98,6 +60,37 @@
     			localStorage['token'] = '';
     			window.location.replace("./main.html");	
     		});
+
+    		console.log("Getting courses info ");
+			
+        	var Url = 'http://127.0.0.1:8000/api/education/course/';
+			
+			$.ajax({
+    			type: "GET",
+    			url: Url,
+    			headers: { 'Authorization': 'Token ' + x},
+    			contentType: 'application/x-www-form-urlencoded'
+    		}).done(function(course, status){
+    			console.log(course);
+            
+            	$.each(course, function(index, value){
+            		var course = `
+						<div class="col s4 m7 course-` + value.id + `">
+							<div class="card medium">
+								<div class="card-image">
+									<img src="images/img1.jpg">
+								</div>
+								<div class="card-content right-align">
+									<h5><a href="./course_page.html?id=` + value.id + `">` + value.name + `</a></h5>
+									<p >زمان: ` + value.time + `
+									</p>
+								</div>
+							</div>
+						</div>
+					`;
+					$(".courses-row").append(course);
+            	});
+    		})
 
     	}
 	})
