updated login and sign up page

--- a/Project/Frontend/login.html
+++ b/Project/Frontend/login.html
@@ -97,7 +97,7 @@
 					تازه هستید؟
 				</p>
 				<p>با ثبت نام در سامانه از امکانات بی نظیر ما بهره مند شوید</p>
-				<a href="" class="signup">ثبت نام</a>
+				<a href="./signup.html" class="signup sign-log">ثبت نام</a>
 			</div>
 		</div>
 	</div>
