--- a/Project/Frontend/courses.html
+++ b/Project/Frontend/courses.html
@@ -28,7 +28,7 @@
 		<li class="center"><a href="./main.html">ویسپو</a></li>
 		<li class="center"><a href="./profile.html"><i class="material-icons right-align small">assignment_ind</i>مشخصات</a></li>
 		<li class="center"><a href="./edit.html"><i class="material-icons right-align small">edit</i>ویرایش</a></li>
-		<li class="center"><a href="./courses.html"><i class="material-icons right-align small">widgets</i>من دوره ها</a></li>   
+		<li class="center"><a href="./courses.html"><i class="material-icons right-align small">widgets</i> دوره ها</a></li>   
 		<li class="center logout"><a href="#"><i class="material-icons  right-align small">exit_to_app</i>خروج</a></li>
 	</ul>      
 
