fixed value of genders

--- a/Project/Frontend/profile.html
+++ b/Project/Frontend/profile.html
@@ -55,7 +55,7 @@
 
 
 	<ul id="slide-out" class="sidenav sidenav-fixed" >
-		<li class="center"><a>ویسپو</a></li>
+		<li class="center"><a href="./main.html">ویسپو</a></li>
 		<li class="center"><a href="./profile.html"><i class="material-icons right-align small">assignment_ind</i>مشخصات</a></li>
 		<li class="center"><a href="./edit.html"><i class="material-icons right-align small">edit</i>ویرایش</a></li>
 		<li class="center"><a href="./courses.html"><i class="material-icons right-align small">widgets</i>دوره ها</a></li>   
