--- a/Project/Frontend/edit.html
+++ b/Project/Frontend/edit.html
@@ -55,7 +55,7 @@
 <body style="font-family: Vazir;">
 
 	<ul id="slide-out" class="sidenav sidenav-fixed" >
-		<li class="center"><a>ویسپو</a></li>
+		<li class="center"><a href="./main.html">ویسپو</a></li>
 		<li class="center"><a href="./profile.html"><i class="material-icons right-align small">assignment_ind</i>مشخصات</a></li>
 		<li class="center"><a href="./edit.html"><i class="material-icons right-align small">edit</i>ویرایش</a></li>
 		<li class="center"><a href="./courses.html"><i class="material-icons right-align small">widgets</i>دوره ها</a></li>   
@@ -98,8 +98,8 @@
 
 						<select>
 							<option value=""  disabled selected>جنسیت</option>
-							<option value="1" style="margin-right: 20px;">زن</option>
-							<option value="0">مرد</option>
+							<option value="female" style="margin-right: 20px;">زن</option>
+							<option value="male">مرد</option>
 						</select>
 					</div>
 
