--- a/Project/Frontend/main.html
+++ b/Project/Frontend/main.html
@@ -52,6 +52,7 @@
             <li id="login" style="float: right;"><a href="./login.html">ورود</a></li>
             <li style="color: rgb(36, 194, 141); float: right;">|</li>   
             <li style="float: right;"><a id="signup" href="./signup.html">ثبت نام</a></li>   
+            <li style="float: right;"><a id="courses" href="./courses.html"> دوره ها</a></li>   
             <li ><a href="#"> <img src="images/logo.jpg" alt="" style="width: 150px;"> </a></li>
         </ul>
         </div>
@@ -129,6 +130,7 @@
     	}else{
         $('#login').replaceWith('<li id="login" style="float: right;"><a href="./profile.html">صفحه من</a></li>')
         $('#signup').replaceWith('<li id="login" style="float: right;"><a href="./courses.html">دوره ها</a></li>')
+        $('#courses').replaceWith('')
     		// window.location.replace("./courses.html");
     	}
 	})
