--- a/Project/Frontend/signup.html
+++ b/Project/Frontend/signup.html
@@ -176,6 +176,7 @@ $(document).ready(function(){
         formUrl = 'http://127.0.0.1:8000/api/user/user/',
         formMethod = form.attr('method');
   		        
+        // console.log(formData);
         $.ajax({
         	type: "POST",
             url: formUrl,
